--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@ header {
   align-items: center;
   margin: 5px 0;
   gap: 8px;
+  margin-left:5px;
+  margin-right:5px;
 }
+
 .header-center input {
   padding: 8px;
   border-radius: 6px;
