--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@ header {
   align-items: center;
   margin: 5px 0;
   gap: 8px;
+  margin-left:5px;
+  margin-right:5px;
   flex-wrap: nowrap; /* ✅ Force one line */
   overflow-x: auto;   /* ✅ Prevent overflow issues */
 }
