--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@ button.green:hover {
       <option>Milk</option>
       <option>Water</option>
       <option>Sardine</option>
+      <option>Wood</option>
     </select>
     <input
       type="number"
@@ -340,7 +341,7 @@ button.green:hover {
   </div>
 
   <button onclick="addBuyer()">Add Buyer</button>
-  <button onclick="exportPDF()" class="green" style="margin-left: 10px;">Export to PDF</button>
+  <button onclick="exportPDF()" class="green" style="margin-left: 10px; max-width:70px;">Export to PDF</button>
 
   <h3>Buyers List</h3>
   <div id="buyerList"></div>
